tests/sksl/errors/ReservedNameTexture.glsl
### Compilation failed:

error: 1: name 'texture1D' is reserved
int texture1D;
    ^^^^^^^^^
error: 2: name 'texture1DArray' is reserved
int texture1DArray;
    ^^^^^^^^^^^^^^
error: 3: name 'texture2DArray' is reserved
int texture2DArray;
    ^^^^^^^^^^^^^^
error: 4: name 'texture2DMS' is reserved
int texture2DMS;
    ^^^^^^^^^^^
error: 5: name 'texture2DMSArray' is reserved
int texture2DMSArray;
    ^^^^^^^^^^^^^^^^
error: 6: name 'texture3D' is reserved
int texture3D;
    ^^^^^^^^^
error: 7: name 'textureBuffer' is reserved
int textureBuffer;
    ^^^^^^^^^^^^^
error: 8: name 'textureCube' is reserved
int textureCube;
    ^^^^^^^^^^^
error: 9: name 'textureCubeArray' is reserved
int textureCubeArray;
    ^^^^^^^^^^^^^^^^
error: 11: name 'itexture1D' is reserved
int itexture1D;
    ^^^^^^^^^^
error: 12: name 'itexture2D' is reserved
int itexture2D;
    ^^^^^^^^^^
error: 13: name 'itexture3D' is reserved
int itexture3D;
    ^^^^^^^^^^
error: 14: name 'itexture1DArray' is reserved
int itexture1DArray;
    ^^^^^^^^^^^^^^^
error: 15: name 'itexture2DArray' is reserved
int itexture2DArray;
    ^^^^^^^^^^^^^^^
error: 16: name 'itexture2DRect' is reserved
int itexture2DRect;
    ^^^^^^^^^^^^^^
error: 17: name 'itexture2DMS' is reserved
int itexture2DMS;
    ^^^^^^^^^^^^
error: 18: name 'itexture2DMSArray' is reserved
int itexture2DMSArray;
    ^^^^^^^^^^^^^^^^^
error: 19: name 'itextureBuffer' is reserved
int itextureBuffer;
    ^^^^^^^^^^^^^^
error: 20: name 'itextureCube' is reserved
int itextureCube;
    ^^^^^^^^^^^^
error: 21: name 'itextureCubeArray' is reserved
int itextureCubeArray;
    ^^^^^^^^^^^^^^^^^
error: 23: name 'utexture1D' is reserved
int utexture1D;
    ^^^^^^^^^^
error: 24: name 'utexture2D' is reserved
int utexture2D;
    ^^^^^^^^^^
error: 25: name 'utexture3D' is reserved
int utexture3D;
    ^^^^^^^^^^
error: 26: name 'utexture1DArray' is reserved
int utexture1DArray;
    ^^^^^^^^^^^^^^^
error: 27: name 'utexture2DArray' is reserved
int utexture2DArray;
    ^^^^^^^^^^^^^^^
error: 28: name 'utexture2DRect' is reserved
int utexture2DRect;
    ^^^^^^^^^^^^^^
error: 29: name 'utexture2DMS' is reserved
int utexture2DMS;
    ^^^^^^^^^^^^
error: 30: name 'utexture2DMSArray' is reserved
int utexture2DMSArray;
    ^^^^^^^^^^^^^^^^^
error: 31: name 'utextureBuffer' is reserved
int utextureBuffer;
    ^^^^^^^^^^^^^^
error: 32: name 'utextureCube' is reserved
int utextureCube;
    ^^^^^^^^^^^^
error: 33: name 'utextureCubeArray' is reserved
int utextureCubeArray;
    ^^^^^^^^^^^^^^^^^
31 errors
